add fullcalendar dependencies, trying to get basic events to work before syncing with ics file

--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "@docusaurus/core": "2.0.0-beta.18",
     "@docusaurus/plugin-content-docs": "^2.0.0-beta.18",
     "@docusaurus/preset-classic": "2.0.0-beta.18",
-    "@mdx-js/react": "^1.6.22",
+    "@fullcalendar/core": "^5.11.0",
+    "@fullcalendar/daygrid": "^5.11.0",
+    "@fullcalendar/icalendar": "^5.11.0",
+    "@fullcalendar/react": "^5.11.1",
+    "@fullcalendar/timegrid": "^5.11.0",
     "clsx": "^1.1.1",
     "docusaurus-lunr-search": "^2.1.15",
     "prism-react-renderer": "^1.3.1",
